src/css/blog.css
.blog-page-header {
	text-align: center;
}

#blog-posts {
	width: clamp(15rem, 70vw, 60rem);
	margin-inline: auto;
}

.post-card header {
	margin-bottom: 0.5rem;
}

.post-card h2 {
	margin-bottom: 0.5rem;
}

.post-card span {
	font-size: small;
}

.post-card footer {
	margin-top: 0.5rem;
	font-size: small;
}

#post-header {
	text-align: center;
	padding-bottom: 1rem;
	font-family: 'Courier New', Courier, monospace;
	display: flex;
}

#post-header header {
	margin-inline-end: 6rem;
	flex-grow: 1;
}

#post-header h1 {
	height: auto;
	font-size: 4rem;
	font-family: 'Courier New', Courier, monospace;
}

#post-header #back-to-blog {
	width: 6rem;
	height: 6rem;
}

#post-contents {
	max-width: 60rem;
	margin-inline: 8rem;
	margin-block-end: 2rem;
	overflow-x: hidden;
	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

#post-contents h1:first-of-type {
	display: none;
}

